--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.error {
+  color: #e74c3c;
+}
 .primary-color {
   color: #2ecc71;
 }
