added checkout component and other component updated

--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -1,6 +1,9 @@
 .service-container {
   position: relative;
 }
+.service-container:hover {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 .img-container {
   border-radius: 5px;
   overflow: hidden;
