--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -7,6 +7,7 @@
   background-size: cover;
   position: relative;
   margin-bottom: 30px;
+  clip-path: polygon(100% 0, 100% 81%, 0 100%, 0 100%, 0 100%, 0 0);
 }
 .banner-wraper {
   position: absolute;
@@ -49,6 +50,7 @@
 }
 .btn-link:last-child {
   background-color: transparent;
+  color: #fff;
 }
 .btn-link:last-child:hover {
   background-color: #2ecc71;
@@ -57,6 +59,7 @@
 @media only screen and (max-width: 576px) {
   .banner-container {
     min-height: 100vh;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 100%, 0 100%, 0 0);
   }
   .banner-content {
     margin-top: 50px;
@@ -80,5 +83,10 @@
     width: 50%;
     font-size: 14px;
     padding: 7px 6px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 992px) {
+  .banner-container {
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 100%, 0 100%, 0 0);
   }
 }
