--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -4,6 +4,11 @@
   padding-bottom: 30px;
   border-radius: 8px;
 }
+.img-continer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 .form-container {
   width: 50%;
