--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -5,6 +5,8 @@
 
 .about-img-container img {
   width: 100%;
+  height: 300px;
+  object-fit: cover;
   border: 5px solid #fff;
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -15,7 +17,8 @@
     width: 100%;
   }
   .about-img-container img {
-    width: 70%;
+    width: 60%;
+    height: 200px;
     display: block;
     margin: 0 auto;
   }
@@ -26,6 +29,7 @@
   }
   .about-img-container img {
     width: 80%;
+    height: 80%;
     display: block;
     margin: 0 auto;
   }
